--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/auth": "^18.8.0",
+    "@react-native-firebase/database": "^18.8.0",
+    "@react-native-firebase/firestore": "^18.8.0",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-date-picker": "^4.3.5",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.3",
     "yup": "^1.3.3"
   },
