--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-collapsible": "^1.6.1",
     "react-native-date-picker": "^4.3.5",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.14.1",
